--- a/Aula1/style.css
+++ b/Aula1/style.css
@@ -55,3 +55,11 @@ button {
 button:hover {
     background-color: #45a049;
 }
+
+.resposta{
+    text-align: center;
+    align-items: center;
+    font-size: 1rem; 
+    color: #555; 
+    margin-top: 20px;
+}
